SLING-11143 - Work around SLING-10831 by adding an add-opens flag to the Starter entrypoint